# ChangeLog for net-analyzer/tcpdump
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcpdump/ChangeLog,v 1.180 2014/05/29 12:34:00 jer Exp $

  29 May 2014; Jeroen Roovers <jer@gentoo.org> tcpdump-4.5.1-r1.ebuild:
  Stable for HPPA (bug #511502).

  06 Dec 2013; Tim Harder <radhermit@gentoo.org> -tcpdump-4.4.0.ebuild,
  -tcpdump-4.5.1.ebuild:
  Remove old.

  06 Dec 2013; Tim Harder <radhermit@gentoo.org> tcpdump-4.5.1-r1.ebuild:
  Use better workaround for bug #488522.

*tcpdump-4.5.1-r1 (06 Dec 2013)

  06 Dec 2013; Rick Farina <zerochaos@gentoo.org> +tcpdump-4.5.1-r1.ebuild:
  fix for bug #488522 thanks to pchrist

  28 Nov 2013; Tim Harder <radhermit@gentoo.org> tcpdump-4.4.0-r1.ebuild:
  Fix test logic (bug #482374).

  28 Nov 2013; Tim Harder <radhermit@gentoo.org> tcpdump-4.5.1.ebuild:
  Disable user support when drop-root is disabled (bug #488522).

*tcpdump-4.5.1 (28 Nov 2013)

  28 Nov 2013; Tim Harder <radhermit@gentoo.org> +tcpdump-4.5.1.ebuild:
  Version bump, fix test logic.

  27 Jul 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove duplicate description.

  04 Jun 2013; Zac Medico <zmedico@gentoo.org> tcpdump-4.4.0-r1.ebuild:
  Fix chroot -> drop-root in pkg_preinst.

  03 Jun 2013; Jeroen Roovers <jer@gentoo.org> tcpdump-4.4.0-r1.ebuild,
  metadata.xml:
  Avoid test suite failure when USE=drop-root / FEATURES=-userpriv (bug
  #435982). Rename USE=chroot to USE=drop-root since USE=suid is already taken
  and has a different meaning in these ebuilds.

  03 Jun 2013; Jeroen Roovers <jer@gentoo.org> tcpdump-4.4.0-r1.ebuild:
  Use append-cflags instead of append-flags.

  02 Jun 2013; Jeroen Roovers <jer@gentoo.org> tcpdump-4.4.0-r1.ebuild:
  Run user.eclass functions conditionally, and in pkg_preinst too. Fix CFLAGS
  -O2 injection better. Copy the configure warning about SMB support.

  02 Jun 2013; Jeroen Roovers <jer@gentoo.org> tcpdump-4.4.0-r1.ebuild: