@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/tcpdump
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcpdump/ChangeLog,v 1.180 2014/05/29 12:34:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcpdump/ChangeLog,v 1.181 2014/06/08 11:55:54 nimiux Exp $
+
+  08 Jun 2014; Chema Alonso <nimiux@gentoo.org> tcpdump-4.5.1-r1.ebuild:
+  Stable for amd64 wrt bug #511502
 
   29 May 2014; Jeroen Roovers <jer@gentoo.org> tcpdump-4.5.1-r1.ebuild:
   Stable for HPPA (bug #511502).
